force-app/main/default/objects/SFDC_URL__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>NPX_Account_View_Embed__c</fullName>
        <label>NPX Account View Embed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPX_Survey_Invitations_Embed_Code__c</fullName>
        <label>NPX Survey Invitations Embed Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPX_Survey_Responses_Embed__c</fullName>
        <label>NPX Survey Responses Embed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_URL__c</fullName>
        <label>SFDC URL</label>
        <type>Url</type>
    </fields>
    <label>Salesforce URL</label>
</CustomObject>